variables.RunHalf.scala.error
Compilation error:
RunHalf:5: error: type mismatch;
 found   : Unit
 required: Boolean
while (test = 0) {
            ^